[package]
name = "memflow-kvm"
version = "0.2.0"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2021"
rust-version = "1.65.0"
description = "kvm connector for the memflow physical memory introspection framework"
homepage = "https://memflow.github.io/"
repository = "https://github.com/memflow/memflow-kvm.git"
documentation = "https://docs.rs/memflow-kvm"
keywords = [ "memflow", "introspection", "memory" ]
categories = [ "api-bindings", "memory-management", "os" ]
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
memflow-kvm-ioctl = { version = "0.1.1", path = "../memflow-kvm-ioctl" }
memflow = { version = "0.2", features = ["plugins"] }
log = { version = "0.4", default-features = false }

[features]
default = []
inventory = []
